gcc/testsuite/gcc.target/aarch64/cpu-diagnostics-2.c
/* { dg-error "missing" "" {target "aarch64*-*-*" } } */
/* { dg-skip-if "do not override -mcpu" { *-*-* } { "-mcpu=*" } { "" } } */
/* { dg-options "-O2 -mcpu=cortex-a53+no" } */

void f ()
{
  return;
}
